calendar coming together

--- a/FlightLine.App/src/index.html
+++ b/FlightLine.App/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FlightLineApp</title>
@@ -10,8 +11,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <!-- UI made by Stone Mitchell :) -->
+  <!-- stone.mitchell.45@gmail.com , (520)465-8628 -->
+  <!-- Call me like 10 times, i dont pick up numbers i dont know at first -->
+  <!-- My lovely teammates, who deserve credit i guess -->
+  <!-- Aspen Smith, Jake Dimarzio, Brandon Willison -->
+  <!-- mock-up backend, report writer, and UI assistant respectively -->
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
